--- a/src/modules/pedidos/index.html
+++ b/src/modules/pedidos/index.html
@@ -15,6 +15,12 @@
   <script src="./api.js"></script>
   <script src="./convert.js"></script>
 
+  <!-- Set local data -->
+  <script>
+    // TODO: Refatorar para setar uma Session ao Logar
+    sessionStorage.setItem('userEmail', 'leo@teste');
+  </script>
+
   <!-- CSS link -->
   <link rel="stylesheet" href="./style.css" />
 
@@ -79,8 +85,11 @@
             rows="3"></textarea>
         </div>
 
-        <div class="d-flex justify-content-center mb-3">
+        <div class="d-flex justify-content-center mb-1">
           <button type="submit" class="col-6 btn btn-secondary mb-6" onclick="handleSubmit()">Realizar Pedido</button>
+        </div>
+        <div class="d-flex justify-content-center mb-3">
+          <button class="col-6 btn btn-dark mb-6" onclick="goListar()">Ver todos os pedidos</button>
         </div>
       </div>
     </div>
