Altera diversas funcao e adiciona melhor listagem

--- a/src/modules/pedidos/index.html
+++ b/src/modules/pedidos/index.html
@@ -86,7 +86,8 @@
         </div>
 
         <div class="d-flex justify-content-center mb-1">
-          <button type="submit" class="col-6 btn btn-secondary mb-6" onclick="handleSubmit()">Realizar Pedido</button>
+          <button type="submit" class="col-6 btn btn-secondary mb-6" onclick="handleSubmit()" id="btnSubmit">Realizar
+            Pedido</button>
         </div>
         <div class="d-flex justify-content-center mb-3">
           <button class="col-6 btn btn-dark mb-6" onclick="goListar()">Ver todos os pedidos</button>
