--- a/src/modules/vendas/listar/index.html
+++ b/src/modules/vendas/listar/index.html
@@ -30,11 +30,11 @@
             <table id="tabela_venda" class="table">
                 <thead class="thead" id="titulotab">
                     <tr scope="row">
-                        <th  colspan="1">ID</th>
-                        <th  colspan="1">DATA</th>
-                        <th  colspan="1">VENDEDOR</th>
-                        <th  colspan="1">PRODUTOS</th>
-                        <th  colspan="1">VALOR TOTAL</th>
+                        <th colspan="1">ID</th>
+                        <th colspan="1">DATA</th>
+                        <th colspan="1">VENDEDOR</th>
+                        <th colspan="1">PRODUTOS</th>
+                        <th colspan="1">VALOR TOTAL</th>
                     </tr>
                 </thead>
                 <tbody id="tabBody">
@@ -42,7 +42,7 @@
             </table>
         </div>
         <br>
-                <center><button class="btn btn-success" onclick="editarVenda()" type="button">Editar</button></center>
+        <center><button class="btn btn-success" onclick="voltarIndex()" type="button">Voltar</button></center>
     </div>
     <script>
         getVendas()
