add editar pedido

--- a/src/modules/pedidos/index.html
+++ b/src/modules/pedidos/index.html
@@ -28,7 +28,6 @@
 </head>
 
 <body>
-  <img src="../../assets/logo.png" alt="logomarca" id="logo" class="overflow-auto">
 
   <div class="container">
     <div id="border">
@@ -83,6 +82,11 @@
             id="basic-addcon1"><strong>Observação</strong></span>
           <textarea placeholder='Retirar cebola... Adicionar molho.... etc' class="form-control" id="observacao"
             rows="3"></textarea>
+        </div>
+
+        <div class="d-flex justify-content-center mb-1">
+          <button type="submit" class="col-6 btn btn-warning mb-6" onclick="goEditar()" id="btnSubmit">Editar
+            pedido</button>
         </div>
 
         <div class="d-flex justify-content-center mb-1">
