--- a/src/modules/cardapio/index.html
+++ b/src/modules/cardapio/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cardápio</title>
+  <title>Cardápio v1</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
@@ -36,24 +36,30 @@
     </div>
     <div class="modal-container">
       <div class="modal">
-          <label for="m-nome">Nome</label>
-          <input id="m-nome" type="text" required />
-  
-          <label for="m-descricao">Descrição</label>
-          <input id="m-descricao" type="text" required />
-  
-          <label for="m-preco">Preço</label>
-          <input id="m-preco" type="number" required />
-          <button type="submit" onclick="handleSubmit()">Salvar</button>
+
+        <label for="m-id">Id</label>
+        <input id="m-id" type="text" />
+
+        <label for="m-nome">Nome</label>
+        <input id="m-nome" type="text" required />
+
+        <label for="m-descricao">Descrição</label>
+        <input id="m-descricao" type="text" required />
+
+        <label for="m-preco">Preço</label>
+        <input id="m-preco" type="number" required />
+        <button type="submit" onclick="handleSubmit()">Salvar</button>
       </div>
     </div>
 
   </div>
   <script src="./api.js"></script>
   <script src="./script.js"></script>
-  
+
 </body>
 
-<script>getListar()</script>
+<script>
+document.getElementById('m-id').disabled = true
+getListar()</script>
 
 </html>
