troca cores do botao

--- a/src/modules/vendas/cadastrar/index.html
+++ b/src/modules/vendas/cadastrar/index.html
@@ -27,7 +27,7 @@
     <div class="row">
         <center>
             <div class="col-md-12" id="botao">
-                <button type="button" class="btn btn-success" onclick="voltarIndex()">voltar</button>
+                <button type="button" class="btn btn-sencondary" onclick="voltarIndex()">voltar</button>
             </div>
         </center>
 
