--- a/src/modules/vendas/editar/index.html
+++ b/src/modules/vendas/editar/index.html
@@ -24,7 +24,7 @@
             <input type="number" id="buscar" class="form-control"
                 placeholder="Digite o id da venda que você deseja editar" onchange="bloquearEnviar()">
             <span id="buscar" class="input-group-addon">
-                <button class="btn btn-success" onclick="buscaVendaId()" type="button">buscar</button>
+                <button class="btn btn-secondary" onclick="buscaVendaId()" type="button">buscar</button>
             </span>
         </div>
         <br>
@@ -34,7 +34,7 @@
     <div class="row">
         <center>
             <div class="col-md-12" id="botao">
-                <button type="button" class="btn btn-success" onclick="voltarIndex()">voltar</button>
+                <button type="button" class="btn btn-secondary" onclick="voltarIndex()">voltar</button>
             </div>
         </center>
 
