--- a/src/modules/vendas/listar/index.html
+++ b/src/modules/vendas/listar/index.html
@@ -42,7 +42,7 @@
             </table>
         </div>
         <br>
-        <center><button class="btn btn-success" onclick="voltarIndex()" type="button">Voltar</button></center>
+        <center><button class="btn btn-secondary" onclick="voltarIndex()" type="button">Voltar</button></center>
     </div>
     <script>
         getVendas()
