--- a/src/modules/vendas/index.html
+++ b/src/modules/vendas/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Menu</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- TODO: Refazer o logo do restaurante -->
         <h3 class="display-6">Restaurante do Japa - Vendas</h3>
     </div>
-    <br><br><br>
+    <br><br><br><br><br>
     <div class="container d-flex justify-content-center">
         <div class="align-self-center">
             <table class="table table-bordered table-hover" id="menu">
