--- a/src/modules/Financeiro/financeiroList.html
+++ b/src/modules/Financeiro/financeiroList.html
@@ -30,7 +30,7 @@
                 </tbody>
             </table>
         </div>
-        <center><button type="submit" onclick="editar()">Confirmar</button></center>
+        <center><button class="btn btn-success" onclick="location.href = './financeiross.html'">Voltar</button></center>
     </div>
   <script>teste2()</script>
 </body>
