Correção Alert Cep

--- a/src/modules/usuarios/cadastrar/index.html
+++ b/src/modules/usuarios/cadastrar/index.html
@@ -42,7 +42,7 @@
               document.body.appendChild(script);
             }
               } else {
-                return alert("Erro!")
+                return alert("Erro em CEP!")
               }
            }
 
