--- a/src/modules/estoque/EditarEstoque/index.html
+++ b/src/modules/estoque/EditarEstoque/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../style.css">
-    <title>Cadastrar</title>
+    <title>Editar</title>
 </head>
 
 <body>
@@ -17,24 +17,28 @@
     </div>
     <div class="container">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Descricao:</span>
+            <span class="input-group-text" id="basic-addon1">ID do produto que deseja consultar para editar:</span>
+        </div>
+        <input class="form-control mb-3" type="text" name="idProdutoEstoque" id="idProdutoEstoque">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">Nova Descricao:</span>
         </div>
         <input class="form-control mb-3" type="text" name="descricao" id="descricao">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Quantidade:</span>
+            <span class="input-group-text" id="basic-addon1">Nova Quantidade:</span>
         </div>
         <input class="form-control mb-3" type="text" name="quantidade" id="quantidade">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Valor:</span>
+            <span class="input-group-text" id="basic-addon1">Novo Valor:</span>
         </div>
         <input class="form-control mb-3" type="text" name="valor" id="valor">
-        <button class="col-3 btn btn-success" style="margin-right: 10px" onclick="cadastrarProdutoEstoque()"
+        <button class="col-3 btn btn-success" style="margin-right: 10px" onclick="editarProdutoEstoque()"
             type="button">Enviar</button>
         <button class="col-3 btn btn-danger" style="margin-right: 10px" onclick="botaoVoltar()"
             type="button">Voltar</button>
     </div>
 
-    <script src="/src/modules/estoque/cadastrarProdutoEstoque/script.js"></script>
+    <script src="/src/modules/estoque/EditarEstoque/script.js"></script>
 
 </body>
 
