--- a/src/modules/estoque/deletarProdutoDoEstoque/index.html
+++ b/src/modules/estoque/deletarProdutoDoEstoque/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../style.css">
+    <title>Deletar</title>
 </head>
+
 <body>
     <div>
         <h3 class="display-6">Restaurante - Estoque</h3>
     </div>
-    <div>
-        <h2>ID do produto que deseja deletar:</h2>
-        <input type="text" name="idProdutoEstoque" id="idProdutoEstoque">
-        <button onclick="deletaProdutosEstoque()" type="button">Deletar</button>
+    <div class="container">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">ID do produto que deseja deletar:</span>
+        </div>
+        <input class="form-control mb-3" type="text" name="idProdutoEstoque" id="idProdutoEstoque">
+        <button class="col-3 btn btn-success" style="margin-right: 10px" onclick="deletaProdutosEstoque()"
+            type="button">Deletar</button>
+        <button class="col-3 btn btn-danger" style="margin-right: 10px" onclick="botaoVoltar()"
+            type="button">Voltar</button>
     </div>
-    <div>
-        <button onclick="botaoVoltar()" type="button">Voltar</button>
-    </div>
-
     <script src="/src/modules/estoque/deletarProdutoDoEstoque/script.js"></script>
-
 </body>
+
 </html>
