--- a/src/modules/estoque/index.html
+++ b/src/modules/estoque/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-
-    <title>Estoque</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
+  <title>Estoque</title>
 </head>
+
 <body>
-    <div>
-        <h3 class="display-6">Restaurante - Estoque</h3>
+  <div>
+    <h3 class="display-6 mb-3">Restaurante - Estoque</h3>
+    <div class="d-flex justify-content-center mb-5">
+      <button onclick="botaoCadastrar()" class="col-3 btn btn-secondary" style="margin-right: 10px">Cadastrar</button>
+      <button onclick="botaoDeletar()" class="col-3 btn btn-secondary"
+        style="margin-left: 10px; margin-right: 10px">Deletar</button>
+      <button onclick="botaoEditar()" class="col-3 btn btn-secondary" style="margin-left: 10px">Editar</button>
     </div>
-    <div class="container d-flex justify-content-center">
-        <div>
-            <div class="align-self-center">
-                <table id="table">
-                    <td>ID</td>
-                    <td>Descrição</td>
-                    <td>Quantidade</td>
-                    <td>Valor</td>
-                </table>
-            </div>
-        </div>
+  </div>
+  <div class="container">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">ID do produto que deseja consultar:</span>
+      </div>
+      <input type="text" class="form-control" name="idProdutoEstoque" id="idProdutoEstoque">
+      <button class="btn btn-dark" onclick="listaProdutosEstoqueId()" type="button">Consultar</button>
     </div>
-    <div>
-        <button onclick="botaoCadastrar()" type="button">Cadastrar</button>
-    </div>
-    <div>
-        <button onclick="botaoDeletar()" type="button">Deletar</button>
-    </div>
-
-    <script src="/src/modules/estoque/listaEstoque/script.js"></script>
-
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Descrição</th>
+          <th scope="col">Quantidade</th>
+          <th scope="col">Valor</th>
+        </tr>
+      </thead>
+      <tbody id="table">
+      </tbody>
+    </table>
+  </div>
+  <script src="/src/modules/estoque/listaEstoque/script.js"></script>
+  <div>
 </body>
+
 </html>
