ADD Listar ao HTML Login

--- a/src/modules/usuarios/login/index.html
+++ b/src/modules/usuarios/login/index.html
@@ -49,6 +49,8 @@
     <div>
     <button class="div1" style="float: left" class="div1" type="submit" onclick="ValidaUsuario()">Acessar</button>
     <button class="div1" style=" float: rigth" type="submit" onclick="CadastrarUsuario()">Cadastrar Usuário</button>
+    <button class="div1" style=" float: rigth" type="submit" onclick="ListarUsuario()">Listar Usuário</button>
+
     </div>
     <br>
     
