add estoque no inicio

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                     window.location.href = "modules/usuarios/login/index.html";
                     break;
                 case 'estoque':
+                    window.location.href = "modules/estoque/index.html";
                     break;
                     window.location.href = "modules/estoque/index.html";
                 case 'vendas':
@@ -52,6 +53,9 @@
             </div>
             <div class="m-5 border d-flex align-self-center justify-content-center">
                 <button type="button" onclick="goTo('login')" class="m-5 btn btn-primary col-6">Login</button>
+            </div>
+            <div class="m-5 border d-flex align-self-center justify-content-center">
+                <button type="button" onclick="goTo('estoque')" class="m-5 btn btn-primary col-6">Estoque</button>
             </div>
             <div class="m-5 border d-flex align-self-center justify-content-center">
                 <button type="button" onclick="goTo('financeiro')" class="m-5 btn btn-primary col-6">Financeiro</button>
