--- a/src/modules/Financeiro/financeiross.html
+++ b/src/modules/Financeiro/financeiross.html
@@ -61,6 +61,12 @@
                 <button class="btn btn-success" type="submit">Listar </button>
             </form>
         </center>
+        <br>
+        <center>
+            <div class="col-md-12">
+                <button type="button" class="btn btn-dark" onclick="location.href='../../index.html'">voltar ao Início</button>
+            </div>
+        </center>
 
     </div>
 
