--- a/src/modules/vendas/index.html
+++ b/src/modules/vendas/index.html
@@ -34,6 +34,12 @@
             </table>
         </div>
     </div>
+    <br>
+        <center>
+            <div class="col-md-12">
+                <button type="button" class="btn btn-dark" onclick="location.href='../../index.html'">voltar ao Início</button>
+            </div>
+        </center>
     <script>
         function telaCadastrar() {
             location.href = "cadastrar/index.html"
