update botao confirmar

--- a/src/modules/vendas/index.html
+++ b/src/modules/vendas/index.html
@@ -39,6 +39,7 @@
             <div class="col-md-12">
                 <button type="button" class="btn btn-dark" onclick="location.href='../../index.html'">voltar ao Início</button>
             </div>
+            <div id="confirmarEditar"></div>
         </center>
     <script>
         function telaCadastrar() {
