alterando fluxo vendas

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                     break;
                     window.location.href = "modules/estoque/index.html";
                 case 'vendas':
-                    window.location.href = "modules/vendas/index.html";
+                    window.location.href = "modules/vendas/listar/index.html";
                     break;
             }
         }
