--- a/src/modules/vendas/editar/index.html
+++ b/src/modules/vendas/editar/index.html
@@ -34,7 +34,7 @@
     <div class="row">
         <center>
             <div class="col-md-12" id="botao">
-                <button type="button" class="btn btn-secondary" onclick="voltarIndex()">voltar</button>
+                <button type="button" class="btn btn-dark" onclick="location.href='../listar/index.html'">voltar</button>
             </div>
         </center>
 
