--- a/src/modules/vendas/listar/index.html
+++ b/src/modules/vendas/listar/index.html
@@ -42,7 +42,11 @@
             </table>
         </div>
         <br>
-        <center><button class="btn btn-secondary" onclick="voltarIndex()" type="button">Voltar</button></center>
+        <center><button type="button" class="btn btn-secondary" onclick="location.href='../cadastrar/index.html'">Cadastrar</button></center>
+        <br>
+        <center><button type="button" class="btn btn-secondary" onclick="location.href='../editar/index.html'">Editar</button></center>
+        <br>
+        <center><button type="button" class="btn btn-dark" onclick="location.href='../../../index.html'">voltar ao Início</button></center>
     </div>
     <script>
         getVendas()
